INCLUDE(UsePkgConfig)

PROJECT(wvtftpd)
ENABLE_TESTING()

PKGCONFIG(libuniconf UNICONF_INCLUDEDIR UNICONF_LIBDIR UNICONF_LINKFLAGS UNICONF_CFLAGS)

INCLUDE_DIRECTORIES(${WVTFTP_SOURCE_DIR})

ADD_LIBRARY(wvtftp wvtftpbase.cc wvtftpserver.cc)
SET_TARGET_PROPERTIES(wvtftp
		      PROPERTIES COMPILE_FLAGS ${UNICONF_CFLAGS})

ADD_EXECUTABLE(wvtftpd wvtftpd.cc)
TARGET_LINK_LIBRARIES(wvtftpd wvtftp)
SET_TARGET_PROPERTIES(wvtftpd
		      PROPERTIES COMPILE_FLAGS ${UNICONF_CFLAGS}
		      		 LINK_FLAGS ${UNICONF_LINKFLAGS})
INSTALL(TARGETS wvtftpd
	RUNTIME DESTINATION bin)
INSTALL(FILES wvtftpd.8
	DESTINATION share/man/man8)

SUBDIRS(t)

# Kind of gross
ADD_TEST(all valgrind --tool=memcheck t/all.t)

SET(WVTFTP_VERSION 1.0.1)
CONFIGURE_FILE(version.h.in version.h)
CONFIGURE_FILE(redhat/wvtftpd.spec.in redhat/wvtftpd.spec)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "wvtftpd")
#SET(CPACK_PACKAGE_VENDOR "Lua")
#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "1")
SET(CPACK_PACKAGE_EXECUTABLES "wvtftpd" "wvtftpd")
INCLUDE(CPack)
