PKGCONFIG(libwvtest WVTEST_INCLUDEDIR WVTEST_LIBDIR WVTEST_LINKFLAGS WVTEST_CFLAGS)

ADD_EXECUTABLE(all.t all.t.cc wvtftpserver.t.cc)
TARGET_LINK_LIBRARIES(all.t wvtftp)

SET_TARGET_PROPERTIES(all.t 
		      PROPERTIES COMPILE_FLAGS "${UNICONF_CFLAGS} ${WVTEST_CFLAGS}"
		      		 LINK_FLAGS "${UNICONF_LINKFLAGS} ${WVTEST_LINKFLAGS}")
